--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <p>
         I will upload some of my projects here. Enjoy and free to you to send feedback. 😉
     </p>
+    <h3>
+        <a href="projects/stats-preview-card-component-main/index.html">Stats Preview Card Component Main</a>
+    </h3>
 </body>
 </html>
