Relinked stats-preview-card-component project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         I will upload some of my projects here. Enjoy and free to you to send feedback. 😉
     </p>
     <h3>
-        <a href="projects/stats-preview-card-component-main/index.html">Stats Preview Card Component Main</a>
+        <a href="https://andolalaina.github.io/stats-preview-card-component/">Stats Preview Card Component Main</a>
     </h3>
 </body>
 </html>
