--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <p>
         I will upload some of my projects here. Enjoy and free to you to send feedback. 😉
     </p>
-    <h3>
-        <a href="https://andolalaina.github.io/stats-preview-card-component/">Stats Preview Card Component Main</a>
-    </h3>
+    <h2>
+        Frontend Projects
+    </h2>
+    <ul>
+        <li><a href="https://andolalaina.github.io/stats-preview-card-component/">Stats Preview Card Component Main</a></li>
+        <li><a href="https://andolalaina.github.io/3column-preview-card-component/">3-column Preview Card Component</a></li>
+    </ul>
 </body>
 </html>
