--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <ul>
         <li><a href="https://andolalaina.github.io/stats-preview-card-component/">Stats Preview Card Component Main</a></li>
         <li><a href="https://andolalaina.github.io/3column-preview-card-component/">3-column Preview Card Component</a></li>
+        <li><a href="https://andolalaina.github.io/w1-visit-card/">Visit Card</a></li>
     </ul>
 </body>
 </html>
